event filtering for scheduled games #136